--- a/template.ini
+++ b/template.ini
@@ -155,3 +155,4 @@ custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.clo
 ;下方参数请勿修改
 enable_rule_generator=true
 overwrite_original_rules=true
+clash_rule_base=https://raw.githubusercontent.com/lz37/clash_ruleset/refs/heads/main/base/clash.yaml
