--- a/template.ini
+++ b/template.ini
@@ -10,7 +10,7 @@
 ;修改顺序会影响分流效果
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.process.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
