--- a/base/clash.yaml
+++ b/base/clash.yaml
@@ -4,22 +4,32 @@ socks-port: 7891
 allow-lan: true
 mode: rule
 log-level: error
-external-controller: 127.0.0.1:9090
 redir-port: 7892
 tproxy-port: 7895
 mixed-port: 7893
-bind-address: "127.0.0.1"
+external-controller: 127.0.0.1:9090
+external-controller-cors:
+  allow-private-network: true
+bind-address: "*"
 keep-alive-interval: 15
 keep-alive-idle: 600
 ipv6: true
 geodata-mode: true
+geo-auto-update: true
+geo-update-interval: 24
 geodata-loader: standard
+geox-url:
+  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
+  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
+  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
+  asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
 tcp-concurrent: true
 unified-delay: true
-find-process-mode: always
+find-process-mode: strict
 global-client-fingerprint: random
 profile:
   store-selected: true
+  store-fake-ip: true
 dns:
   enable: true
   ipv6: true
