--- a/base/clash.yaml
+++ b/base/clash.yaml
@@ -1,4 +1,33 @@
 # yaml-language-server: $schema=https://github.com/dongchengjie/meta-json-schema/releases/download/v1.19.5/clash-nyanpasu-merge-json-schema.json
+.fallback: &fallback
+  - https://dns.quad9.net/dns-query
+  - https://dns.google/dns-query
+  - https://1.1.1.1/dns-query
+  - https://public.dns.iij.jp/dns-query
+  - https://jp.tiarap.org/dns-query
+  - https://doh.dnslify.com/dns-query
+  - https://dns.twnic.tw/dns-query
+  - https://dns.oszx.co/dns-query
+  - https://doh.applied-privacy.net/query
+  - https://dnsforge.de/dns-query
+  - https://doh.ffmuc.net/dns-query
+  - https://doh.mullvad.net/dns-query
+  - https://101.101.101.101/dns-query
+.fallback-ipv4: &fallback-ipv4
+  - https://dns.quad9.net/dns-query#disable-ipv6=true
+  - https://dns.google/dns-query#disable-ipv6=true
+  - https://1.1.1.1/dns-query#disable-ipv6=true
+  - https://public.dns.iij.jp/dns-query#disable-ipv6=true
+  - https://jp.tiarap.org/dns-query#disable-ipv6=true
+  - https://doh.dnslify.com/dns-query#disable-ipv6=true
+  - https://dns.twnic.tw/dns-query#disable-ipv6=true
+  - https://dns.oszx.co/dns-query#disable-ipv6=true
+  - https://doh.applied-privacy.net/query#disable-ipv6=true
+  - https://dnsforge.de/dns-query#disable-ipv6=true
+  - https://doh.ffmuc.net/dns-query#disable-ipv6=true
+  - https://doh.mullvad.net/dns-query#disable-ipv6=true
+  - https://101.101.101.101/dns-query#disable-ipv6=true
+
 port: 7890
 socks-port: 7891
 allow-lan: true
@@ -36,133 +65,121 @@ dns:
   enhanced-mode: redir-host
   listen: 0.0.0.0:7874
   nameserver-policy:
+    ruleset:🛜 Zerotier: *fallback
     geosite:category-games@cn:
-    - https://doh.pub/dns-query
-    - 114.114.114.114
-    - 223.5.5.5
+      - https://doh.pub/dns-query
+      - 114.114.114.114
+      - 223.5.5.5
     geosite:cn:
-    - https://doh.pub/dns-query
-    - 114.114.114.114
-    - 223.5.5.5
+      - https://doh.pub/dns-query
+      - 114.114.114.114
+      - 223.5.5.5
     geosite:atlassian:
-    - https://doh.pub/dns-query
-    - 114.114.114.114
-    - 223.5.5.5
+      - https://doh.pub/dns-query
+      - 114.114.114.114
+      - 223.5.5.5
     "+.zerozawa.top":
+      - 119.29.29.29
+      - 119.28.28.28
+      - "2402:4e00::"
+    "+.wanghua.link":
+      - 223.5.5.5
+      - 223.6.6.6
+      - 2400:3200::1
+      - 2400:3200:baba::1
+    "+.zfqqjb.top":
+      - 122.112.208.1
+      - 139.9.23.9
+      - 114.115.192.1
+      - 116.205.5.1
+  nameserver:
     - 119.29.29.29
     - 119.28.28.28
-    - '2402:4e00::'
-    "+.wanghua.link":
     - 223.5.5.5
-    - 223.6.6.6
-    - 2400:3200::1
-    - 2400:3200:baba::1
-    "+.zfqqjb.top":
-    - 122.112.208.1
-    - 139.9.23.9
-    - 114.115.192.1
-    - 116.205.5.1
-  nameserver:
-  - 119.29.29.29
-  - 119.28.28.28
-  - 223.5.5.5
-  - https://doh.pub/dns-query
-  - https://dns.alidns.com/dns-query
-  fallback:
-  - https://dns.quad9.net/dns-query#disable-ipv6=true
-  - https://dns.google/dns-query#disable-ipv6=true
-  - https://1.1.1.1/dns-query#disable-ipv6=true
-  - https://public.dns.iij.jp/dns-query#disable-ipv6=true
-  - https://jp.tiarap.org/dns-query#disable-ipv6=true
-  - https://doh.dnslify.com/dns-query#disable-ipv6=true
-  - https://dns.twnic.tw/dns-query#disable-ipv6=true
-  - https://dns.oszx.co/dns-query#disable-ipv6=true
-  - https://doh.applied-privacy.net/query#disable-ipv6=true
-  - https://dnsforge.de/dns-query#disable-ipv6=true
-  - https://doh.ffmuc.net/dns-query#disable-ipv6=true
-  - https://doh.mullvad.net/dns-query#disable-ipv6=true
-  - https://101.101.101.101/dns-query#disable-ipv6=true
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
+  fallback: *fallback-ipv4
   default-nameserver:
-  - 119.29.29.29
-  - 119.28.28.28
-  - 223.5.5.5
-  - https://1.1.1.1/dns-query#disable-ipv6=true
-  - https://8.8.8.8/dns-query#disable-ipv6=true
-  - https://9.9.9.9/dns-query#disable-ipv6=true
+    - 119.29.29.29
+    - 119.28.28.28
+    - 223.5.5.5
+    - https://1.1.1.1/dns-query#disable-ipv6=true
+    - https://8.8.8.8/dns-query#disable-ipv6=true
+    - https://9.9.9.9/dns-query#disable-ipv6=true
   fallback-filter:
     geoip: true
     geoip-code: CN
     ipcidr:
-    - ::/128
-    - ::1/128
-    - 2001::/32
-    - 0.0.0.0/8
-    - 10.0.0.0/8
-    - 100.64.0.0/10
-    - 127.0.0.0/8
-    - 169.254.0.0/16
-    - 172.16.0.0/12
-    - 192.0.0.0/24
-    - 192.0.2.0/24
-    - 192.88.99.0/24
-    - 192.168.0.0/16
-    - 198.18.0.0/15
-    - 198.51.100.0/24
-    - 203.0.113.0/24
-    - 224.0.0.0/4
-    - 240.0.0.0/4
-    - 255.255.255.255/32
+      - ::/128
+      - ::1/128
+      - 2001::/32
+      - 0.0.0.0/8
+      - 10.0.0.0/8
+      - 100.64.0.0/10
+      - 127.0.0.0/8
+      - 169.254.0.0/16
+      - 172.16.0.0/12
+      - 192.0.0.0/24
+      - 192.0.2.0/24
+      - 192.88.99.0/24
+      - 192.168.0.0/16
+      - 198.18.0.0/15
+      - 198.51.100.0/24
+      - 203.0.113.0/24
+      - 224.0.0.0/4
+      - 240.0.0.0/4
+      - 255.255.255.255/32
     domain:
-    - "+.google.com"
-    - "+.github.com"
-    - "+.facebook.com"
-    - "+.youtube.com"
-    - "+.githubusercontent.com"
-    - "+.googlevideo.com"
-    - "+.msftconnecttest.com"
-    - "+.msftncsi.com"
-    - "+.flathub.org"
-    - "+.bitnami.com"
+      - "+.google.com"
+      - "+.github.com"
+      - "+.facebook.com"
+      - "+.youtube.com"
+      - "+.githubusercontent.com"
+      - "+.googlevideo.com"
+      - "+.msftconnecttest.com"
+      - "+.msftncsi.com"
+      - "+.flathub.org"
+      - "+.bitnami.com"
 sniffer:
   enable: true
   override-destination: true
   sniff:
     QUIC:
       ports:
-      - 443
-      - 8443
+        - 443
+        - 8443
     TLS:
       ports:
-      - 443
-      - 8443
+        - 443
+        - 8443
     HTTP:
       ports:
-      - 80
-      - 8080-8880
+        - 80
+        - 8080-8880
       override-destination: true
   force-domain:
-  - "+.google.com"
-  - "+.facebook.com"
-  - "+.youtube.com"
-  - "+.githubusercontent.com"
-  - "+.googlevideo.com"
-  - "+.msftconnecttest.com"
-  - "+.msftncsi.com"
-  - "+.docker.io"
-  - "+.v2ex.com"
-  - "+.jsdelivr.net"
-  - "+.netflix.com"
-  - "+.nflxvideo.net"
-  - "+.amazonaws.com"
-  - "+.media.dssott.com"
+    - "+.google.com"
+    - "+.facebook.com"
+    - "+.youtube.com"
+    - "+.githubusercontent.com"
+    - "+.googlevideo.com"
+    - "+.msftconnecttest.com"
+    - "+.msftncsi.com"
+    - "+.docker.io"
+    - "+.v2ex.com"
+    - "+.jsdelivr.net"
+    - "+.netflix.com"
+    - "+.nflxvideo.net"
+    - "+.amazonaws.com"
+    - "+.media.dssott.com"
   skip-domain:
-  - "+.apple.com"
-  - Mijia Cloud
-  - dlg.io.mi.com
-  - "+.oray.com"
-  - "+.sunlogin.net"
-  - "+.push.apple.com"
-  - geosite:cn
+    - "+.apple.com"
+    - Mijia Cloud
+    - dlg.io.mi.com
+    - "+.oray.com"
+    - "+.sunlogin.net"
+    - "+.push.apple.com"
+    - geosite:cn
   force-dns-mapping: true
   parse-pure-ip: true
 tun:
