--- a/template.ini
+++ b/template.ini
@@ -2,7 +2,7 @@
 ;全分组防DNS泄漏订阅转换模板
 ;作者：https://github.com/lz37
 ;基于 Custom_OpenClash_Rules 模板魔改而来
-;原项目地址：https://github.com/Aethersailor/Custom_OpenClash_Rules
+;原项目地址：https://github.com/Aethersailor/Custom_OpenClash_Rules # 好像删了怎么回事
 
 [custom]
 ;设置规则标志位
@@ -13,15 +13,13 @@ ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.proxy.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list,28800
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list,28800
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list,28800
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list,28800
 ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list,28800
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Game_Download_CDN.list,28800
+ruleset=🎯 全球直连,[]GEOSITE,category-game-accelerator-cn
 ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
+ruleset=🛜 Zerotier,[]GEOSITE,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.zerotier.list
 ruleset=💬 即时通讯,[]GEOSITE,category-communication
 ruleset=🌐 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
@@ -50,7 +48,6 @@ ruleset=🎥 Emby,https://raw.githubusercontent.com/ddgksf2013/Filter/refs/heads
 ruleset=🎻 Spotify,[]GEOSITE,spotify
 ruleset=📺 Bahamut,[]GEOSITE,bahamut
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list,28800
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/IPTVMainland_Domain.list,28800
 ruleset=🌎 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list,28800
 ruleset=🛒 国外电商,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Amazon/Amazon.list,28800
 ruleset=🛒 国外电商,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/AmazonIP/AmazonIP.list,28800
@@ -82,6 +79,8 @@ custom_proxy_group=🔮 负载均衡`load-balance`.*`https://cp.cloudflare.com/g
 custom_proxy_group=🔯 故障转移`fallback`.*`https://cp.cloudflare.com/generate_204`180
 
 custom_proxy_group=🐈‍⬛ GitHub`select`[]⚡️ 原生节点`[]💰 低倍率节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔮 负载均衡`🔯 故障转移`[]🎯 全球直连`.*
+
+custom_proxy_group=🛜 Zerotier`select`[]⚡️ 原生节点`[]💰 低倍率节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔮 负载均衡`🔯 故障转移`[]🎯 全球直连`.*
 
 custom_proxy_group=🐟 docker`select`[]⚡️ 原生节点`[]💰 低倍率节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔮 负载均衡`🔯 故障转移`[]🎯 全球直连`.*
 
