--- a/template.ini
+++ b/template.ini
@@ -19,7 +19,7 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
 ruleset=🎯 全球直连,[]GEOSITE,category-game-accelerator-cn
 ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
-ruleset=🛜 Zerotier,[]GEOSITE,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.zerotier.list
+ruleset=🛜 Zerotier,https://raw.githubusercontent.com/lz37/clash_ruleset/main/rules/zerozawa.zerotier.list
 ruleset=💬 即时通讯,[]GEOSITE,category-communication
 ruleset=🌐 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
