--- a/base/clash.yaml
+++ b/base/clash.yaml
@@ -1,7 +1,7 @@
-# yaml-language-server: $schema=https://github.com/dongchengjie/meta-json-schema/releases/download/v1.19.10/meta-json-schema.json
+# yaml-language-server: $schema=https://github.com/dongchengjie/meta-json-schema/releases/download/v1.19.11/meta-json-schema.json
 .fallback: &fallback
   - https://dns.quad9.net/dns-query
-  - https://dns.google/dns-query
+  - https://8.8.8.8/dns-query
   - https://1.1.1.1/dns-query
   - https://public.dns.iij.jp/dns-query
   - https://jp.tiarap.org/dns-query
@@ -12,10 +12,10 @@
   - https://dnsforge.de/dns-query
   - https://doh.ffmuc.net/dns-query
   - https://doh.mullvad.net/dns-query
-  - https://101.101.101.101/dns-query
+  - https://dns.twnic.tw/dns-query
 .fallback-ipv4: &fallback-ipv4
   - https://dns.quad9.net/dns-query#disable-ipv6=true
-  - https://dns.google/dns-query#disable-ipv6=true
+  - https://8.8.8.8/dns-query#disable-ipv6=true
   - https://1.1.1.1/dns-query#disable-ipv6=true
   - https://public.dns.iij.jp/dns-query#disable-ipv6=true
   - https://jp.tiarap.org/dns-query#disable-ipv6=true
@@ -26,7 +26,7 @@
   - https://dnsforge.de/dns-query#disable-ipv6=true
   - https://doh.ffmuc.net/dns-query#disable-ipv6=true
   - https://doh.mullvad.net/dns-query#disable-ipv6=true
-  - https://101.101.101.101/dns-query#disable-ipv6=true
+  - https://dns.twnic.tw/dns-query#disable-ipv6=true
 
 port: 7890
 socks-port: 7891
@@ -66,15 +66,7 @@ dns:
   listen: 0.0.0.0:7874
   nameserver-policy:
     "+.zerotier.com": *fallback
-    geosite:category-games@cn:
-      - https://doh.pub/dns-query
-      - 114.114.114.114
-      - 223.5.5.5
-    geosite:cn:
-      - https://doh.pub/dns-query
-      - 114.114.114.114
-      - 223.5.5.5
-    geosite:atlassian:
+    geosite:category-games@cn,cn,atlassian:
       - https://doh.pub/dns-query
       - 114.114.114.114
       - 223.5.5.5
@@ -92,20 +84,49 @@ dns:
       - 139.9.23.9
       - 114.115.192.1
       - 116.205.5.1
-  nameserver:
+  nameserver: ## 参考 https://dns.icoa.cn
+    # dnspod
     - 119.29.29.29
     - 119.28.28.28
-    - 223.5.5.5
+    - 2402:4e00::
+    - 2402:4e00:1::
     - https://doh.pub/dns-query
+    - https://sm2.doh.pub/dns-query
+    # baidu
+    - 223.5.5.5
+    - 223.6.6.6
+    - 2400:3200::1
+    - 2400:3200:baba::1
     - https://dns.alidns.com/dns-query
+    # 114
+    - 114.114.114.114
+    - 114.114.115.115
+    # baidu
+    - 180.76.76.76
+    # 360
+    - 101.226.4.6
+    - 218.30.118.6
+    - https://doh.360.cn
+    # 字节
+    - 180.184.1.1
+    - 180.184.2.2
+    # cnnic
+    - 1.2.4.8
+    - 210.2.4.8
+    # onedns
+    - 117.50.10.10
+    - 52.80.52.52
+    - 2400:7fc0:849e:200::8
+    - 2404:c2c0:85d8:901::8
+    - https://doh-pure.onedns.net/dns-query
+    -
   fallback: *fallback-ipv4
   default-nameserver:
     - 119.29.29.29
-    - 119.28.28.28
     - 223.5.5.5
     - https://1.1.1.1/dns-query#disable-ipv6=true
     - https://8.8.8.8/dns-query#disable-ipv6=true
-    - https://9.9.9.9/dns-query#disable-ipv6=true
+    # - https://9.9.9.9/dns-query#disable-ipv6=true
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -130,13 +151,8 @@ dns:
       - 240.0.0.0/4
       - 255.255.255.255/32
     domain:
-      - geosite:google
-      - geosite:facebook
       - geosite:github
-      - geosite:youtube
-      - geosite:amazon
-      - geosite:disney
-      - geosite:netflix
+      - geosite:google,youtube,amazon
       - "+.msftconnecttest.com"
       - "+.msftncsi.com"
       - +.flathub.org
@@ -159,23 +175,13 @@ sniffer:
         - 8080-8880
       override-destination: true
   force-domain:
-    - geosite:google
-    - geosite:facebook
-    - geosite:github
-    - geosite:youtube
-    - geosite:docker
-    - geosite:jsdelivr
-    - geosite:netflix
-    - geosite:disney
+    - geosite:docker,github,jsdelivr
+    - geosite:google,youtube,microsoft,amazon
     - geosite:microsoft
-    - geosite:amazon
     - "+.v2ex.com"
   skip-domain:
-    - geosite:apple
-    - geosite:microsoft@cn
-    - geosite:category-collaborate-cn
-    - geosite:xiaomi
-    - geosite:cn
+    - geosite:cn,category-collaborate-cn,xiaomi
+    - geosite:apple,microsoft@cn
   force-dns-mapping: true
   parse-pure-ip: true
 tun:
