--- a/base/mihomo-provider.yaml
+++ b/base/mihomo-provider.yaml
@@ -11,7 +11,7 @@ proxy-providers-common: &proxy-providers-common
     timeout: 5000
     lazy: true
     expected-status: 204
-  exclude-filter: (?i)距离下次重置剩余|套餐到期|剩余流量|官网|GooglePlay|防失联
+  exclude-filter: (?i)距离下次重置剩余|套餐到期|剩余流量|官网|GooglePlay|防失联|特殊时期
 proxy-providers:
   xxx:
     <<: *proxy-providers-common
@@ -40,14 +40,14 @@ proxy-groups:
   - name: 🚀 节点选择
     <<: *select-url-test
     proxies:
-    - ♻️ 自动选择
-    - 🇭🇰 香港节点
-    - 🇹🇼 台湾节点
-    - 🇯🇵 日本节点
-    - 🇸🇬 新加坡节点
-    - 🇺🇸 美国节点
-    - 🚀 手动切换
-    - 🎯 全球直连
+      - ♻️ 自动选择
+      - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 新加坡节点
+      - 🇺🇸 美国节点
+      - 🚀 手动切换
+      - 🎯 全球直连
   - name: 🐈‍⬛ GitHub
     <<: *select-url-test
   - name: 🐟 docker
@@ -368,6 +368,8 @@ sniffer:
     - +.v2ex.com
   force-dns-mapping: true
   parse-pure-ip: true
+  force-domain:
+    - geosite:github
 tun:
   stack: mixed
   auto-route: true
